# pathtracer

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
scenes/: cornell.json  cornell.mtl  spheres.json
src/: CMakeLists.txt  camera.cpp  camera.hh  color.cpp  color.hh  image.cpp  image.hh  light.hh  main.cpp  material.hh  matrix.cpp  matrix.hh  object.cpp  object.hh  parser.cpp  point_light.cpp  point_light.hh  ray.hh  render.cpp  render.hh  scene.cpp  scene.hh  sphere.cpp  sphere.hh  texture_material.hh  triangle.cpp  triangle.hh  uniform_texture.cpp  uniform_texture.hh  vector.cpp  vector.hh
src/accelerator/: aabb.cpp  aabb.hh  bvh.cpp  bvh.hh
src/bsdf/: bsdf.cpp  bsdf.hh  diffuse.cpp  diffuse.hh  specular.cpp  specular.hh
src/materials/: diffuse.cpp  diffuse.hh  material.cpp  material.hh  microfacet.cpp  microfacet.hh  specular.cpp  specular.hh  uniform_texture.cpp
src/objects/: component.hh  compound.hh  light.hh  object.cpp  object.hh  point_light.cpp  point_light.hh  sphere.cpp  sphere.hh  triangle.cpp  triangle.hh
src/rendering/: camera.cpp  camera.hh  image.cpp  image.hh  parser.cpp  parser.hh  ray.hh  render.cpp  render.hh  scene.cpp  scene.hh
src/utils/: color.cpp  color.hh  matrix.cpp  matrix.hh  random.cpp  random.hh  vector.cpp  vector.hh
tests/: CMakeLists.txt  test_sphere.cpp  test_vector.cpp
